style.css
/* FONTS */

@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');

/* CSS CUSTOM PROPERTIES */

:root {
  --ff-primary: 'Montserrat', sans-serif;
  --ff-secondary: 'Oswald', sans-serif;

  --fw-regular: 400;
  --fw-semiBold: 500;
  --fw-bold: 700;

  --fs-400: 1rem;
  --fs-500: 1.125rem;
  --fs-550: 1.3125rem;
  --fs-600: 1.5rem;
  --fs-700: 1.875rem;
  --fs-800: 2.25rem;
  --fs-850: 3.25rem;
  --fs-900: 5.625rem;

  --clr-neutral-100: hsl(0, 0%, 100%);
  --clr-neutral-200: hsl(0, 0%, 95%);

  --clr-accent-400: hsl(40, 20%, 56%);
  --clr-accent-450: hsl(224, 6%, 52%);
  --clr-accent-500: hsl(225, 7%, 47%);
  --clr-accent-700: hsl(226, 15%, 27%);
  --clr-accent-800: hsl(226, 16%, 21%);
}

/* CSS RESET */

*,
::before,
::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100vh;
}

img {
  max-width: 100%;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

/* BODY & TYPOGRAPHY */

body {
  font-family: var(--ff-primary);
  font-size: var(--fs-400);
  font-weight: var(--fw-regular);
  line-height: 1.5;
}

h1,
h2,
h3 {
  font-family: var(--ff-secondary);
  font-weight: var(--fw-bold);
  line-height: 1.1;
}

section {
  padding: 2em 1.5em;
}

.text-align {
  text-align: center;
}

/* UTILITY */

.wrapper {
  max-width: 75rem;
  margin: 0 auto;
}

.bg-light {
  background: var(--clr-neutral-200);
}

.bg-dark {
  background: var(--clr-accent-700);
}

.flow-bottom {
  margin-bottom: 2em;
}

/* COMPONENTS */

.btn {
  background: var(--clr-accent-400);
  color: var(--clr-neutral-100);
  font-family: var(--ff-secondary);
  font-size: var(--fs-600);
  font-weight: var(--fw-bold);
  padding: 0.35em 1.5em;
  text-transform: uppercase;
  border: none;
  border-radius: 24px;
}

.btn:hover,
.btn:focus {
  color: var(--clr-accent-400);
  background: var(--clr-neutral-100);
  outline: 2px solid var(--clr-accent-400);
  transition: all 400ms ease-in-out;
}

/* HEADER & NAV */

header {
  background: var(--clr-accent-800);
  padding: 1em 0;
  text-align: center;
}

.logo {
  height: 30px;
}

.nav {
  width: 100%;
}

.nav--toggle {
  --nav-toggle: var(--clr-accent-500);
  position: absolute;
  top: 8px;
  right: 8px;
  cursor: pointer;
}

.nav--toggle {
  --button-color: #232;
}

.nav--toggle[data-state='closed'] :is(.top, .bottom) {
  animation: to-open-icon 1s forwards;
}

.nav--toggle[data-state='opened'] :is(.top, .bottom) {
  animation: to-close-icon 1s forwards;
}
.nav--toggle .hamburger {
  transition: rotate 800ms 100ms;
}
.nav--toggle[data-state='opened'] .hamburger {
  rotate: 1turn;
}

.nav--toggle .line.top {
  --rotation: -45deg;
  transform-origin: 65px 45px;
}
.nav--toggle .line.bottom {
  --rotation: 45deg;
  transform-origin: 60px 55px;
}

@keyframes to-close-icon {
  0% {
    stroke-dashoffset: 0;
  }
  40% {
    stroke-dashoffset: 79.9;
  }
  60% {
    stroke-dashoffset: 79.9;
    rotate: calc(var(--rotation));
  }
  100% {
    stroke-dashoffset: 0;
    rotate: var(--rotation);
  }
}
@keyframes to-open-icon {
  0% {
    stroke-dashoffset: 0;
    rotate: var(--rotation);
  }
  40% {
    stroke-dashoffset: 79.9;
    rotate: var(--rotation);
  }
  60% {
    stroke-dashoffset: 79.9;
  }
  100% {
    stroke-dashoffset: 0;
  }
}

.nav {
  visibility: hidden;
  height: 0;
  position: absolute;
}

.nav--visible {
  visibility: visible;
  height: auto;
  position: relative;
}

.nav__list {
  margin: 0;
  padding: 0;
}

.nav__item {
  margin-top: 0.75em;
}

.nav__link {
  font-family: var(--ff-secondary);
  font-size: var(--fs-500);
  color: var(--clr-neutral-100);
  text-transform: uppercase;
}

.nav__link:hover,
.nav__link:focus {
  opacity: 0.75;
  border-bottom: 2px solid var(--clr-neutral-100);
  transition: all 400ms ease-in-out;
}

/* HERO */

.hero__title {
  font-size: var(--fs-850);
  color: var(--clr-neutral-100);
  text-align: center;
  margin-bottom: 1em;
}

.hero__title span {
  color: var(--clr-accent-400);
}

.hero__text {
  font-size: var(--fs-600);
  color: var(--clr-neutral-200);
  margin-bottom: 2em;
  text-align: center;
}

.hero__btn {
  display: flex;
  justify-content: center;
}

/* SECTION STYLES */

.section__one--title {
  font-size: var(--fs-700);
  color: var(--clr-accent-400);
  margin-bottom: 0.5em;
}

.section__one--text {
  font-size: var(--fs-500);
  margin-bottom: 2em;
}

.section__two--title {
  font-size: var(--fs-800);
  color: var(--clr-accent-400);
  margin-bottom: 0.75em;
}

.section__two--text {
  font-size: var(--fs-550);
  margin-bottom: 1.5em;
}

.section__two--img {
  margin-bottom: 1.5em;
  border-radius: 8px;
}

/* CARD STYLES */

.card {
  color: var(--clr-neutral-100);
  padding: 2em;
  text-align: center;
  margin-bottom: 1em;
  border-radius: 8px;
}

.card__title {
  font-size: var(--fs-700);
}

.card__text {
  font-size: var(--fs-500);
  color: var(--clr-neutral-200);
  padding: 1em 0 0 0;
}

@media (min-width: 700px) {
  .card-section {
    display: flex;
    gap: 1.5em;
  }
}

/* FOOTER */

.footer__title {
  color: var(--clr-neutral-100);
  font-size: var(--fs-700);
  font-weight: var(--fw-bold);
  text-align: center;
  padding-block: 2em;
}

.footer__subtitle {
  font-size: var(--fs-550);
  color: var(--clr-accent-400);
  padding-bottom: 1em;
}

.footer__text {
  color: var(--clr-accent-450);
  padding-inline: 2em;
  padding-bottom: 2em;
}

footer li {
  padding-block: 0.5em;
}

footer a {
  color: var(--clr-accent-450);
}

footer a:hover,
footer a:focus {
  color: var(--clr-neutral-100);
  border-bottom: 2px solid var(--clr-neutral-100);
  transition: all 400ms ease-in-out;
}

@media (min-width: 1000px) {
  .nav--toggle {
    display: none;
  }

  .nav {
    visibility: visible;
    display: flex;
    justify-content: flex-end;
    height: auto;
    position: relative;
  }

  .nav__list {
    display: flex;
    justify-content: space-between;
    margin-right: 1.5em;
  }

  .nav__item {
    display: inline-block;
    justify-content: space-between;
    margin: 0 0 0 3em;
  }

  .logo {
    display: flex;
  }
  .hero__title {
    font-size: var(--fs-900);
  }

  .row {
    display: flex;
    justify-content: space-between;
  }

  .col {
    width: 100%;
  }

  .col + .col {
    margin-left: 6em;
  }

  section {
    padding: 7em 1em 5em 1em;
  }

  .hero__text {
    margin-top: 7em;
    margin-left: 5em;
    text-align: left;
  }

  .section__two {
    width: 60%;
  }

  .section__three {
    width: 32%;
  }

  .card-section {
    display: flex;
    flex-direction: column;
  }

  .flex-footer {
    width: 40%;
  }

  .flex-footer2 {
    width: 20%;
  }
}

